<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="32dp"
            android:paddingBottom="32dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:errorEnabled="true"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/sign_up_hint_first_name"
                    android:inputType="textPersonName|textCapSentences"
                    android:singleLine="true">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/sign_up_hint_last_name"
                    android:inputType="textPersonName|textCapSentences"
                    android:singleLine="true"
                    android:textStyle="normal">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/sign_up_hint_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/sign_up_hint_birthday"
                    android:inputType="date"
                    android:singleLine="true">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_birthday">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_forward"
                    android:editable="false"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/sign_up_hint_country"
                    android:singleLine="true">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_preferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_country"
                android:text="Before we move on with setting password, can you please provide some short text about your trips lifestyle in order to make you better travel plans.The following things may help:\nAdventourosity or more into relax.\nCultural and historical sites or more into nature.\nVibrant nightlife or more into classy dinner."
                android:layout_marginHorizontal="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_preferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/textView_preferences"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_preferences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/sign_up_hint_preferences"
                    android:inputType="textPersonName|textCapSentences|textMultiLine">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_preferences"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/sign_up_hint_password"
                    android:inputType="textPassword"
                    android:singleLine="true">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/sign_up_hint_password_confirm"
                    android:inputType="textPassword"
                    android:singleLine="true">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_requirements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/password_requirements"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_confirm_password" />

            <LinearLayout
                android:id="@+id/linearLayout_requirements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:weightSum="1"
                app:layout_constraintTop_toBottomOf="@id/textView_requirements">

                <TextView
                    android:id="@+id/textView_abc_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.111"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/string_requirements_abc_up"
                    android:textColor="@color/color_password_requirements"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.111"
                    android:gravity="center"
                    android:text="@string/string_requirements_separator" />

                <TextView
                    android:id="@+id/textView_abc_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.111"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/string_requirements_abc_low"
                    android:textColor="@color/color_password_requirements"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.111"
                    android:gravity="center"
                    android:text="@string/string_requirements_separator" />

                <TextView
                    android:id="@+id/textView_123"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.111"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/string_requirements_numbers"
                    android:textColor="@color/color_password_requirements"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.111"
                    android:gravity="center"
                    android:text="@string/string_requirements_separator" />

                <TextView
                    android:id="@+id/textView_spec_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.111"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/string_requirements_special_chars"
                    android:textColor="@color/color_password_requirements"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.111"
                    android:gravity="center"
                    android:text="@string/string_requirements_separator" />

                <TextView
                    android:id="@+id/textView_8_cars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.111"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:lineSpacingExtra="7sp"
                    android:singleLine="true"
                    android:text="@string/string_requirements_char_number"
                    android:textColor="@color/color_password_requirements"
                    android:textSize="14sp" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton_register"
                style="@style/Theme.FlightSearch.Button.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Register"
                app:layout_constraintTop_toBottomOf="@id/linearLayout_requirements" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>